# CSFinalProject

./: .gitignore  AudioApp.py  CHANGELOG.md  README.md  Thursday_at_13-43.m4a  controller.py  model.py  pyproject.toml  requirements.txt  soundapp.py  test.py  view.py
